--- a/templates/vars.yml.j2
+++ b/templates/vars.yml.j2
@@ -7,3 +7,4 @@ satellite_server: https://satellite.example.com
 satellite_organization: Default Organization
 satellite_repository: AAP Installer
 satellite_product: AAP
+satellite_content_view_name: AAP Installer
