validate certs variable

--- a/templates/vars.yml.j2
+++ b/templates/vars.yml.j2
@@ -4,6 +4,7 @@ requires_satellite: True
 satellite_user: admin
 satellite_password: changeme
 satellite_server: https://satellite.example.com
+satellite_validate_certs: True
 satellite_organization: Default Organization
 satellite_repository: AAP Installer
 satellite_product: AAP
